Fixed timeline CSS
- Fixed overlapping blocks when the text is over multiple lines, and
  bad positioning.

--- a/static/scss/reports/minecraft/_timeline.scss
+++ b/static/scss/reports/minecraft/_timeline.scss
@@ -56,8 +56,8 @@ $minecraft-timeline-width: 90%;
 .minecraft-timeline {
   position: relative;
 
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   padding-left: 3rem;
 
   font-family: $family-minecraft;
@@ -69,104 +69,96 @@ $minecraft-timeline-width: 90%;
     display: block;
     position: absolute;
 
-    left: calc(3rem + 21px);
-    top: calc(1rem + 8px);
+    left: calc(3rem + 30px);
+    top: calc(2rem + 8px);
 
     width: 6px;
-    height: calc(100% - 3.4rem);
+    height: calc(100% - 8.6rem);
 
     background: $minecraft-timeline-line-inner;
     border: solid 2px $minecraft-timeline-line-outer;
   }
 
   .timeline-item {
-    &:not(:last-child) {
-      padding-bottom: 1rem;
+    display: block;
+    position: relative;
 
-      &:not(.has-details) {
-        padding-bottom: 1.5rem;
+    &:not(:last-child) {
+      margin-bottom: 1.6rem;
+    }
+
+    figure {
+      position: absolute; // Required, else the title is above the icon.
+
+      width: 48px;
+      height: 48px;
+
+      padding-top: 4px;
+      margin-top: -.35rem;
+      margin-left: .6rem;
+
+      border-width: 4px;
+      border-style: solid;
+      border-radius: 6px;
+
+      text-align: center;
+
+      z-index: 8;
+
+      @include unselectable;
+
+      img {
+        width: 32px;
+        height: 32px;
+
+        // We want to keep the pixels. Else, the image is blurred (because of aliasing).
+        image-rendering: crisp-edges;
+
+        &.is-head {
+          border-radius: 6px;
+        }
       }
     }
 
-    .timeline-item-header {
-      position: relative;
+    h4 {
+      position: relative; // Required for z-index
 
-      figure {
-        position: absolute; // Required, else the title is above the icon.
+      padding-top: 3px;
+      padding-bottom: 4px;
+      padding-left: 64px;
 
-        width: 48px;
-        height: 48px;
+      width: $minecraft-timeline-width;
 
-        padding-top: 4px;
+      border-width: 4px;
+      border-style: solid;
+      border-radius: 6px;
 
-        border-width: 4px;
-        border-style: solid;
-        border-radius: 6px;
+      cursor: default;
 
-        text-align: center;
+      // For the details pane not going above the title.
+      z-index: 4;
 
-        z-index: 10;
+      time {
+        display: none;
 
-        img {
-          width: 32px;
-          height: 32px;
-
-          // We want to keep the pixels. Else, the image is blurred (because of aliasing).
-          image-rendering: crisp-edges;
-
-          &.is-head {
-            border-radius: 6px;
-          }
-        }
-      }
-
-      h4 {
         position: absolute;
 
-        top: 5px;
-        left: -8px;
+        left: $minecraft-timeline-width - 11%;
+        top: 1em;
 
-        padding-top: 3px;
-        padding-bottom: 4px;
-        padding-left: 64px;
+        padding: .1em .5em;
+        height: 2.1em;
 
-        width: $minecraft-timeline-width;
+        border: solid 3px #26035d;
+        border-radius: 5px;
 
-        border-width: 4px;
-        border-style: solid;
-        border-radius: 6px;
+        background: rgba(0, 0, 20, .9);
 
         cursor: default;
-
-        // For the details pane not going above the title.
-        z-index: 8;
-
-        time {
-          display: none;
-
-          position: absolute;
-
-          left: $minecraft-timeline-width - 11%;
-          top: 1em;
-
-          padding: .1em .5em;
-          height: 2.1em;
-
-          border: solid 3px #26035d;
-          border-radius: 5px;
-
-          background: rgba(0, 0, 20, .9);
-
-          cursor: default;
-        }
-
-        &:hover time {
-          display: block;
-        }
       }
 
-      .is-clearfix {
-        height: 48px !important;
+      &:hover time {
+        display: block;
       }
     }
 
@@ -177,38 +169,34 @@ $minecraft-timeline-width: 90%;
 
     @each $key, $colors in zip(map_keys($minecraft-timeline-colors), map_values($minecraft-timeline-colors)) {
       &.is-#{$key}-event {
-        .timeline-item-header {
-          figure {
-            background-color: map_get($colors, icon-background);
-            border-top-color: map_get($colors, icon-border-top-left);
-            border-left-color: map_get($colors, icon-border-top-left);
-            border-bottom-color: map_get($colors, icon-border-bottom-right);
-            border-right-color: map_get($colors, icon-border-bottom-right);
-          }
+        figure {
+          background-color: map_get($colors, icon-background);
+          border-top-color: map_get($colors, icon-border-top-left);
+          border-left-color: map_get($colors, icon-border-top-left);
+          border-bottom-color: map_get($colors, icon-border-bottom-right);
+          border-right-color: map_get($colors, icon-border-bottom-right);
+        }
 
-          h4 {
-            background-color: map_get($colors, title-background);
+        h4 {
+          background-color: map_get($colors, title-background);
 
-            border-top-color: map_get($colors, title-border-top-left);
-            border-left-color: map_get($colors, title-border-top-left);
-            border-bottom-color: map_get($colors, title-border-bottom-right);
-            border-right-color: map_get($colors, title-border-bottom-right);
+          border-top-color: map_get($colors, title-border-top-left);
+          border-left-color: map_get($colors, title-border-top-left);
+          border-bottom-color: map_get($colors, title-border-bottom-right);
+          border-right-color: map_get($colors, title-border-bottom-right);
 
-            color: map_get($colors, title-text);
-            text-shadow: 1px 1px 0 rgba(map_get($colors, title-shadow), .2);
-          }
+          color: map_get($colors, title-text);
+          text-shadow: 1px 1px 0 rgba(map_get($colors, title-shadow), .2);
         }
       }
     }
 
     .timeline-item-details {
-      position: relative;
-      left: -8px;
-      top: -.8rem;
+      margin-top: -.8rem;
 
       width: $minecraft-timeline-width;
 
-      padding: .7rem .5rem .4rem;
+      padding: .8rem .5rem .4rem;
 
       border: solid 4px $minecraft-timeline-details-border;
       border-radius: 6px;
